tests/invalid/generated_binop_bitand_float_int/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: float = 1.0
    y: int = 1
    z = x & y
